--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="error_unable_to_connect">Unable to connect. Please check your internet connection</string>
     <string name="error_incorrect_code">Incorrect code</string>
     <string name="error_phone_number_verification">Couldn\'t verify your phone number. Please try again</string>
+    <string name="error_network_connection">Please check your network connection and try again</string>
 </resources>
