--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,16 @@
     <string name="error_incorrect_code">Incorrect code</string>
     <string name="error_phone_number_verification">Couldn\'t verify your phone number. Please try again</string>
     <string name="error_network_connection">Please check your network connection and try again</string>
+    <string name="last_name">Last Name</string>
+    <string name="first_name">First Name</string>
+    <string name="other_names">Other Names</string>
+    <string name="hint_optional">Optional...</string>
+    <string name="email_address">Email Address</string>
+    <string name="mobile_number">Mobile Number</string>
+    <string name="doctor_type">Type of Doctor</string>
+    <string name="hint_doctor_type">e.g. Neurologist, Surgeon, etc...</string>
+    <string name="hint_mobile_number">e.g: +428 678 2929</string>
+    <string name="license_number">License Number</string>
+    <string name="degree_photo">Degree Photo</string>
+    <string name="label_confirm_password">Confirm Password</string>
 </resources>
