--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,11 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="home">Home</string>
+    <string name="messages">Messages</string>
+    <string name="results">Results</string>
+    <string name="profile">Profile</string>
+
+    <string name="hi_user">Hi Sam,</string>
+    <string name="how_are_you">How are you feeling today?</string>
 </resources>
